--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
     </div>
   </section>
 
+  <!-- Top Banner -->
+  <section>
+    <img src="files/top_banner.avif" alt="Top Banner" class="w-full h-auto object-cover" />
+  </section>
+
+  <!-- Apprenticeship Section (Placeholder) -->
+  <section id="apprenticeship" class="py-16 px-6 max-w-6xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-4">Apprenticeship</h2>
+    <p class="text-gray-700 text-lg">
+      Learn more about our 9-month apprenticeship program among Muslim newcomers. Details coming soon...
+    </p>
+  </section>
+
   <!-- About + Video Section -->
   <section id="about" class="py-16 px-6 max-w-6xl mx-auto">
     <div class="grid md:grid-cols-2 gap-12 items-center">
@@ -67,6 +80,11 @@
         <li>Engaging your Muslim friend in faith</li>
       </ul>
     </div>
+  </section>
+
+  <!-- Bottom Banner -->
+  <section>
+    <img src="files/down_banner.avif" alt="Bottom Banner" class="w-full h-auto object-cover" />
   </section>
 
   <!-- Footer -->
