--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Segoe UI', sans-serif; }
+    html { scroll-behavior: smooth; }
   </style>
 </head>
 <body class="bg-white text-gray-800">
@@ -15,15 +16,17 @@
   <header class="flex justify-between items-center px-8 py-4 border-b shadow-sm sticky top-0 bg-white z-50">
     <div class="font-bold text-xl">NEWCOMERS PROJECT</div>
     <nav class="space-x-6">
+      <a href="#" class="hover:underline">Home</a>
       <a href="#about" class="hover:underline">About Us</a>
-      <a href="#apprenticeship" class="hover:underline">Apprenticeship</a>
       <a href="#resources" class="hover:underline">Resources</a>
+      <a href="#apprenticeship" class="hover:underline">Apprenticeship</a>
+      
       <a href="#contact" class="hover:underline">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="h-[80vh] bg-cover bg-center flex items-center justify-center text-center relative" style="background-image: url('https://source.unsplash.com/1600x900/?refugees,middleeast');">
+  <!-- Hero Section (Home) with Top Banner Background -->
+  <section class="h-[80vh] bg-cover bg-center flex items-center justify-center text-center relative" style="background-image: url('files/top_banner.avif');">
     <div class="bg-black bg-opacity-60 w-full h-full absolute top-0 left-0"></div>
     <div class="relative z-10 text-white px-6">
       <p class="uppercase text-sm tracking-wide mb-2">Application Open</p>
@@ -32,29 +35,16 @@
     </div>
   </section>
 
-  <!-- Top Banner -->
-  <section>
-    <img src="files/top_banner.avif" alt="Top Banner" class="w-full h-auto object-cover" />
-  </section>
-
-  <!-- Apprenticeship Section (Placeholder) -->
-  <section id="apprenticeship" class="py-16 px-6 max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-4">Apprenticeship</h2>
-    <p class="text-gray-700 text-lg">
-      Learn more about our 9-month apprenticeship program among Muslim newcomers. Details coming soon...
-    </p>
-  </section>
-
-  <!-- About + Video Section -->
+  <!-- About Us + Video Section -->
   <section id="about" class="py-16 px-6 max-w-6xl mx-auto">
     <div class="grid md:grid-cols-2 gap-12 items-center">
       <div class="aspect-video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aVRTK6ZnINE" frameborder="0" allowfullscreen></iframe>
       </div>
       <div>
         <h2 class="text-3xl font-bold mb-4">About Us</h2>
         <p class="text-gray-700 text-lg">
-          We are a Christian ministry based in Alberta, Canada with a focus on serving newcomers to our country from a Middle Eastern Muslim background...
+          We are a Christian ministry based in Alberta, Canada​ with a focus of serving newcomers to our country​ from a Middle Eastern Muslim background. Many o​f these beautiful people who have come to our cou​ntry as refugees have experienced trauma and loss p​rior to arriving here. We take seriously the Biblical man​date to "love the alien as yourself, for you were aliens in t​he land of Egypt: I am the Lord your God" (Leviticus 19:​34). We do this practically through helping these ne​wcomers navigate new life in Canada, and through teachi​ng them English, through our "Adopt a Refugee Progr​am." We are also intentional about engaging these n​ewcomer friends in matters of Christian faith, within the con​text of respectful relationship.  
         </p>
       </div>
     </div>
@@ -63,11 +53,6 @@
   <!-- Resources Section -->
   <section id="resources" class="bg-gray-100 py-16 px-6">
     <div class="max-w-4xl mx-auto text-center">
-      <div class="mb-6">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto text-gray-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6l4 2"/>
-        </svg>
-      </div>
       <h2 class="text-3xl font-bold mb-4">Resources</h2>
       <p class="text-gray-700 mb-6">Our most in-depth training is the “Understanding Islam” class — a 12-hour interactive course covering:</p>
       <ul class="text-left max-w-2xl mx-auto list-disc list-inside text-gray-700 space-y-2">
@@ -87,8 +72,38 @@
     <img src="files/down_banner.avif" alt="Bottom Banner" class="w-full h-auto object-cover" />
   </section>
 
-  <!-- Footer -->
-  <footer class="py-6 text-center text-sm text-gray-500 border-t mt-10">
+  <!-- Apprenticeship Section -->
+  <section id="apprenticeship" class="py-16 px-6 max-w-4xl mx-auto text-center">
+    <img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Apprenticeship Icon" class="mx-auto mb-6 w-20 h-20">
+    <h2 class="text-3xl font-bold mb-4 tracking-wider">APPRENTICESHIP</h2>
+    <p class="text-gray-700 text-lg mb-6">
+      Get hands-on experience and an in-depth learning opportunity through our 9-month Apprenticeship Program.
+      You will be immersed in serving a growing Middle Eastern community in a Canadian urban center, while
+      developing a framework for ministry to Muslims...without leaving Canada.
+    </p>
+    <div class="text-left text-gray-700 space-y-4">
+      <p>There are four components to the Apprenticeship Program:</p>
+      <ol class="list-decimal list-inside space-y-2">
+        <li>Immersion in actually serving and ministering to this Middle Eastern newcomer community</li>
+        <li>
+          An "academic" learning component, as you develop a deeper understanding of the Islamic worldview
+          through a biblical lens, and develop a framework of ministering to them
+        </li>
+        <li>Get hands-on experience as a "missionary in training" within the Canadian context</li>
+        <li>Experience up close mentorship from an experienced worker</li>
+      </ol>
+    </div>
+    <p class="mt-6 text-gray-800 text-lg font-medium">
+      If you are interested in learning more about the Apprenticeship, please <span class="font-bold">contact us</span>.
+    </p>
+  </section>
+
+  
+
+  
+
+  <!-- Footer / Contact -->
+  <footer id="contact" class="py-6 text-center text-sm text-gray-500 border-t mt-10">
     &copy; 2025 Newcomers Project. All rights reserved.
   </footer>
 
