Added the contact form using formspree

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
       <a href="#about" class="hover:underline">About Us</a>
       <a href="#resources" class="hover:underline">Resources</a>
       <a href="#apprenticeship" class="hover:underline">Apprenticeship</a>
-      
-      <a href="#contact" class="hover:underline">Contact</a>
+      <a href="contact.html" class="hover:underline">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero Section (Home) with Top Banner Background -->
+  <!-- Hero Section -->
   <section class="h-[80vh] bg-cover bg-center flex items-center justify-center text-center relative" style="background-image: url('files/top_banner.avif');">
     <div class="bg-black bg-opacity-60 w-full h-full absolute top-0 left-0"></div>
     <div class="relative z-10 text-white px-6">
@@ -35,7 +34,7 @@
     </div>
   </section>
 
-  <!-- About Us + Video Section -->
+  <!-- About Us -->
   <section id="about" class="py-16 px-6 max-w-6xl mx-auto">
     <div class="grid md:grid-cols-2 gap-12 items-center">
       <div class="aspect-video">
@@ -44,17 +43,22 @@
       <div>
         <h2 class="text-3xl font-bold mb-4">About Us</h2>
         <p class="text-gray-700 text-lg">
-          We are a Christian ministry based in Alberta, Canada​ with a focus of serving newcomers to our country​ from a Middle Eastern Muslim background. Many o​f these beautiful people who have come to our cou​ntry as refugees have experienced trauma and loss p​rior to arriving here. We take seriously the Biblical man​date to "love the alien as yourself, for you were aliens in t​he land of Egypt: I am the Lord your God" (Leviticus 19:​34). We do this practically through helping these ne​wcomers navigate new life in Canada, and through teachi​ng them English, through our "Adopt a Refugee Progr​am." We are also intentional about engaging these n​ewcomer friends in matters of Christian faith, within the con​text of respectful relationship.  
+          We are a Christian ministry based in Alberta, Canada​ with a focus of serving newcomers to our country​ from a Middle Eastern Muslim background... [truncated for brevity]
         </p>
       </div>
     </div>
   </section>
 
-  <!-- Resources Section -->
+  <!-- Resources -->
   <section id="resources" class="bg-gray-100 py-16 px-6">
     <div class="max-w-4xl mx-auto text-center">
+      <img src="https://www.svgrepo.com/show/520495/book.svg" alt="Book Resources Logo" class="mx-auto mb-4 w-16 h-auto">
       <h2 class="text-3xl font-bold mb-4">Resources</h2>
-      <p class="text-gray-700 mb-6">Our most in-depth training is the “Understanding Islam” class — a 12-hour interactive course covering:</p>
+      <div class="text-left mb-6 text-gray-700">
+        <p>One aspect of our vision is to train and mobilize the Body of Christ...</p>
+        <br>
+        <p>Our most in-depth training is the “Understanding Islam” class:</p>
+      </div>
       <ul class="text-left max-w-2xl mx-auto list-disc list-inside text-gray-700 space-y-2">
         <li>The origins of Islam</li>
         <li>What Islam teaches about Jesus</li>
@@ -62,7 +66,7 @@
         <li>How the Qur'an was compiled/written</li>
         <li>Do Muslims and Christians worship the same God?</li>
         <li>Serving your Middle Eastern neighbor</li>
-        <li>Engaging your Muslim friend in faith</li>
+        <li>Contextual tools to respectfully engage your Muslim friend</li>
       </ul>
     </div>
   </section>
@@ -72,40 +76,34 @@
     <img src="files/down_banner.avif" alt="Bottom Banner" class="w-full h-auto object-cover" />
   </section>
 
-  <!-- Apprenticeship Section -->
-  <section id="apprenticeship" class="py-16 px-6 max-w-4xl mx-auto text-center">
-    <img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Apprenticeship Icon" class="mx-auto mb-6 w-20 h-20">
-    <h2 class="text-3xl font-bold mb-4 tracking-wider">APPRENTICESHIP</h2>
-    <p class="text-gray-700 text-lg mb-6">
-      Get hands-on experience and an in-depth learning opportunity through our 9-month Apprenticeship Program.
-      You will be immersed in serving a growing Middle Eastern community in a Canadian urban center, while
-      developing a framework for ministry to Muslims...without leaving Canada.
-    </p>
-    <div class="text-left text-gray-700 space-y-4">
-      <p>There are four components to the Apprenticeship Program:</p>
-      <ol class="list-decimal list-inside space-y-2">
-        <li>Immersion in actually serving and ministering to this Middle Eastern newcomer community</li>
-        <li>
-          An "academic" learning component, as you develop a deeper understanding of the Islamic worldview
-          through a biblical lens, and develop a framework of ministering to them
-        </li>
-        <li>Get hands-on experience as a "missionary in training" within the Canadian context</li>
-        <li>Experience up close mentorship from an experienced worker</li>
-      </ol>
+  <!-- Apprenticeship -->
+  <section id="apprenticeship" class="py-16 px-6 max-w-4xl mx-auto">
+    <div class="text-center">
+      <img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png" alt="Apprenticeship Icon" class="mx-auto mb-6 w-20 h-20">
+      <h2 class="text-3xl font-bold mb-4 tracking-wider">APPRENTICESHIP</h2>
     </div>
-    <p class="mt-6 text-gray-800 text-lg font-medium">
-      If you are interested in learning more about the Apprenticeship, please <span class="font-bold">contact us</span>.
-    </p>
+    <div class="text-left text-gray-700 space-y-6">
+      <p class="text-lg">
+        Get hands-on experience and an in-depth learning opportunity through our 9-month Apprenticeship Program...
+      </p>
+      <div>
+        <p>There are four components to the Apprenticeship Program:</p>
+        <ol class="list-decimal list-inside space-y-2">
+          <li>Immersion in serving and ministering to this Middle Eastern newcomer community</li>
+          <li>Academic learning on Islamic worldview from a biblical lens</li>
+          <li>Hands-on experience as a missionary in training in Canada</li>
+          <li>Mentorship from an experienced worker</li>
+        </ol>
+      </div>
+      <p class="text-lg font-medium text-gray-800 text-center">
+        If you are interested in learning more about the Apprenticeship, please <a href="contact.html" class="font-bold text-blue-600 hover:underline">contact us</a>.
+      </p>
+    </div>
   </section>
 
-  
-
-  
-
-  <!-- Footer / Contact -->
-  <footer id="contact" class="py-6 text-center text-sm text-gray-500 border-t mt-10">
+  <!-- Footer -->
+  <footer class="py-6 text-center text-sm text-gray-500 border-t mt-10">
     &copy; 2025 Newcomers Project. All rights reserved.
   </footer>
-
 </body>
 </html>
