Added the give page html

--- a/archives.html
+++ b/archives.html
@@ -20,7 +20,7 @@
       <a href="index.html#about" class="hover:underline">About Us</a>
       <a href="index.html#resources" class="hover:underline">Resources</a>
       <a href="index.html#apprenticeship" class="hover:underline">Apprenticeship</a>
-      <a href="archive.html" class="hover:underline font-semibold text-blue-600">Archives</a>
+      <a href="archives.html" class="hover:underline font-semibold text-blue-600">Archives</a>
       <a href="give.html" class="hover:underline">Give</a>
       <a href="contact.html" class="hover:underline">Contact</a>
     </nav>
