--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="#about" class="hover:underline">About Us</a>
       <a href="#resources" class="hover:underline">Resources</a>
       <a href="#apprenticeship" class="hover:underline">Apprenticeship</a>
-      <a href="archive.html" class="hover:underline">Archives</a>
+      <a href="archives.html" class="hover:underline">Archives</a>
       <a href="give.html" class="hover:underline">Give</a>
       <a href="contact.html" class="hover:underline">Contact</a>
     </nav>
