--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       <img src="https://www.svgrepo.com/show/520495/book.svg" alt="Book Resources Logo" class="mx-auto mb-4 w-16 h-auto">
       <h2 class="text-3xl font-bold mb-4">Resources</h2>
       <div class="text-left mb-6 text-gray-700">
-        <p>One aspect of our vision is to train and mobilize the Body of Christ...</p>
+        <p>One aspect of our vision is to train and mobilize the Body of Christ to respectfully serve and engage with the Muslim communities in our Canadian urban centers. One way that we do this is through seminars and training venues.</p>
         <br>
-        <p>Our most in-depth training is the “Understanding Islam” class:</p>
+        <p>Our most in depth training venue is the "Understanding Islam" Class, which is a 12 hour interactive learning opportunity, where we explore topics such as:</p>
       </div>
       <ul class="text-left max-w-2xl mx-auto list-disc list-inside text-gray-700 space-y-2">
         <li>The origins of Islam</li>
@@ -86,7 +86,10 @@
     </div>
     <div class="text-left text-gray-700 space-y-6">
       <p class="text-lg">
-        Get hands-on experience and an in-depth learning opportunity through our 9-month Apprenticeship Program...
+        Get hands on experience and an in depth learning opportunity through our 9 month Apprenticeship Program.
+      </p>
+      <p class="text-lg">
+        You will be immersed in serving a growing Middle Eastern community in a Canadian urban center, while developing a framework for ministry to Muslims...without leaving Canada.
       </p>
       <div>
         <p>There are four components to the Apprenticeship Program:</p>
