--- a/give.html
+++ b/give.html
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <header class="flex justify-between items-center px-8 py-4 border-b shadow-sm sticky top-0 bg-white z-50">
     <div class="font-bold text-xl">NEWCOMERS PROJECT</div>
-    <nav class="space-x-6">
+    <nav class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-6">
       <a href="index.html" class="hover:underline">Home</a>
       <a href="index.html#about" class="hover:underline">About Us</a>
       <a href="index.html#resources" class="hover:underline">Resources</a>
