Added copyright to give.html

--- a/give.html
+++ b/give.html
@@ -74,6 +74,10 @@
     </form>
   </main>
 
+  <footer class="py-6 text-center text-sm text-gray-500 border-t mt-10">
+    &copy; 2025 Newcomers Project. All rights reserved.
+  </footer>
+
   <script>
     const btn = document.getElementById('menu-btn');
     const menu = document.getElementById('menu');
