reaching muslims with the gospel heading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Navbar -->
   <header class="flex justify-between items-center px-8 py-4 border-b shadow-sm sticky top-0 bg-white z-50">
-    <div class="font-bold text-xl">NEWCOMERS PROJECT</div>
+    <div class="font-bold text-xl">REACHING MUSLIMS WITH THE GOSPEL</div>
 
     <!-- Hamburger button (mobile only) -->
     <button id="menu-btn" class="md:hidden focus:outline-none" aria-label="Toggle menu">
